nye generation og ny kode